# ezanvakti-qt-gui

./: CMakeLists.txt  PKGBUILD  ezanvakti-qt-gui.desktop  ezanvakti-qt-gui.pro  images.qrc  main.cpp  qtezanvakti.cpp  qtezanvakti.h  qtezanvakti.ui
debian/: changelog  control  copyright  ezanvakti-qt-gui.install  rules
